[package]
name = "tc4400_oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
prometheus-client = "0.22.3"
serde = { version = "1.0", features = ["derive"] }
tide = "0.16.0"